--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -88,7 +88,7 @@ DOMAIN-KEYWORD,macked.app,通透世界
 DOMAIN,appstorrent.ru,DIRECT
 
 # > BlockHttpDNS
-RULE-SET,http://bm7/BlockHttpDNS,REJECT
+RULE-SET,http://bm7/BlockHttpDNS/BlockHttpDNS.list,REJECT
 
 # > 局域网地址
 RULE-SET,http://skk/non_ip/lan.conf,DIRECT
@@ -112,30 +112,30 @@ RULE-SET,http://skk/non_ip/microsoft_cdn.conf,DIRECT
 RULE-SET,http://skk/non_ip/apple_cn.conf,DIRECT
 
 # > 微信
-RULE-SET,http://bm7/WeChat,DIRECT
+RULE-SET,http://bm7/WeChat/WeChat.list,DIRECT
 # > 字节跳动
-RULE-SET,http://bm7/ByteDance,DIRECT
+RULE-SET,http://bm7/ByteDance/ByteDance.list,DIRECT
 # > 抖音
-RULE-SET,http://bm7/DouYin,DIRECT
+RULE-SET,http://bm7/DouYin/DouYin.list,DIRECT
 # > 苹果服务
 RULE-SET,http://skk/non_ip/apple_services.conf,Apple,extended-matching
 RULE-SET,http://skk/non_ip/microsoft.conf,Apple,extended-matching
 # > Bilibili
-RULE-SET,http://bm7/BiliBili,Bilibili
+RULE-SET,http://bm7/BiliBili/BiliBili.list,Bilibili
 # > 谷歌服务
-RULE-SET,http://bm7/Google,通透世界
+RULE-SET,http://bm7/Google/Google.list,通透世界
 # > Telegram
 RULE-SET,http://skk/non_ip/telegram.conf,Telegram
 RULE-SET,http://skk/ip/telegram.conf,Telegram
 RULE-SET,http://skk/ip/telegram_asn.conf,Telegram
 # > TikTok
-RULE-SET,http://bm7/TikTok,TikTok
+RULE-SET,http://bm7/TikTok/TikTok.list,TikTok
 # > Instagram
-RULE-SET,http://bm7/Instagram,Instagram
+RULE-SET,http://bm7/Instagram/Instagram.list,Instagram
 # > Twitter
-RULE-SET,http://bm7/Twitter,Twitter
+RULE-SET,http://bm7/Twitter/Twitter.list,Twitter
 # > PikPak
-RULE-SET,http://bm7/PikPak,PikPak
+RULE-SET,http://bm7/PikPak/PikPak.list,PikPak
 # > OpenAI
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
 # > MICU
@@ -148,22 +148,22 @@ DOMAIN-SUFFIX,carryz.net,Emby
 # > 守候Emby
 DOMAIN-SUFFIX,cn2gias.uk,Emby
 # > Jetbrains
-RULE-SET,http://bm7/Jetbrains,通透世界
+RULE-SET,http://bm7/Jetbrains/Jetbrains.list,通透世界
 # > 国内流媒体
-RULE-SET,http://bm7/ChinaMedia,DIRECT
+RULE-SET,http://bm7/ChinaMedia/ChinaMedia.list,DIRECT
 # > 国外流媒体
 RULE-SET,http://skk/non_ip/stream.conf,Streaming,extended-matching
 RULE-SET,http://skk/ip/stream.conf,Streaming,extended-matching
 # > Proxy
 RULE-SET,http://skk/non_ip/global.conf,通透世界,extended-matching
-RULE-SET,http://bm7/Proxy/Proxy_All_No_Resolve,通透世界,extended-matching
+RULE-SET,http://bm7/Proxy/Proxy_All_No_Resolve.list,通透世界,extended-matching
 # > China
 RULE-SET,http://skk/non_ip/domestic.conf,DIRECT
 RULE-SET,http://skk/non_ip/direct.conf,DIRECT
-RULE-SET,http://bm7/China,DIRECT
-RULE-SET,http://bm7/Download,DIRECT
+RULE-SET,http://bm7/China/China.list,DIRECT
+RULE-SET,http://bm7/Download/Download.list,DIRECT
 # > China ASN
-RULE-SET,http://bm7/ChinaASN/ChinaASN_Resolve,DIRECT
+RULE-SET,http://bm7/ChinaASN/ChinaASN_Resolve.list,DIRECT
 # > China 补全
 RULE-SET,https://raw.githubusercontent.com/Blankwonder/surge-list/master/cn.list,DIRECT
 # > GeoIP China
@@ -172,8 +172,8 @@ GEOIP,CN,DIRECT
 FINAL,映照诸天,dns-failed
 
 [URL Rewrite]
-^http://bm7/(.*?)(_.*)?$ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/$1/$1$2.list 302
-^http://skk https://ruleset.skk.moe/List 302
+http://bm7 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge 302
+http://skk https://ruleset.skk.moe/List 302
 
 [MITM]
 hostname = -api.revenuecat.com, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
