--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -36,16 +36,16 @@ udp-priority = false
 udp-policy-not-supported-behaviour = REJECT
 
 [Proxy Group]
-通透世界 = select, 独断万古, Linkeless, SSTAP, Metaverse, LinkCube, JAS.AI, Ayanami, SYN, 独角兽, To2, 异次元杀阵, ESNC, CTC, ACA, TsunamiNet, CitrusLab, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
+通透世界 = select, 独断万古, Linkeless, SSTAP, JAS.AI, Ayanami, SYN, 异次元杀阵, To2, 独角兽, ESNC, CTC, ACA, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
 映照诸天 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Final.png
 独断万古 = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/129.png
 Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1001.png
 SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/120.png
-Metaverse = select, policy-path=https://sub.store/download/Metaverse, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1002.png
-LinkCube = select, policy-path=https://sub.store/download/LinkCube, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/LinkCube.png
 JAS.AI = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1003.png
 Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1004.png
 SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1005.png
+异次元杀阵 = select, policy-path=https://sub.store/download/dimension, update-interval=86400, icon-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png
+To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/To2.png
 Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Apple1.png
 Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Bilibili1.png
 Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Telegram.png
@@ -65,14 +65,10 @@ Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengx
 日本 = select, policy-regex-filter=🇯🇵, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/JP.png
 美利坚 = select, policy-regex-filter=🇺🇸, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/US.png
 韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/KR.png
-异次元杀阵 = select, policy-path=https://sub.store/download/dimension, update-interval=86400, icon-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png
-To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/To2.png
-独角兽 = select, policy-path=https://sub.store/download/unicorn, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/009.png
 ESNC = select, policy-path=https://sub.store/download/ESNC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ESNC.png
+独角兽 = select, policy-path=https://sub.store/download/unicorn, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/009.png
 CTC = select, policy-path=https://sub.store/download/CTC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/008.png
 ACA = select, policy-path=https://sub.store/download/ACA, update-interval=86400, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/aca.png
-TsunamiNet = select, policy-path=https://sub.store/download/TsunamiNet, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/TsunamiNet.png
-CitrusLab = select, policy-path=https://sub.store/download/CitrusLab, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/CitrusLab.png
 
 [Rule]
 # > 机场订阅
@@ -138,8 +134,6 @@ RULE-SET,http://bm7/Twitter/Twitter.list,Twitter
 RULE-SET,http://bm7/PikPak/PikPak.list,PikPak
 # > OpenAI
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
-# > MICU
-DOMAIN-SUFFIX,micu.hk,MICU
 # > SYNEmby
 DOMAIN-SUFFIX,synn.cc,SYNEmby
 # > CC公益Emby
