--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -134,11 +134,20 @@ RULE-SET,http://bm7/Twitter/Twitter.list,Twitter
 RULE-SET,http://bm7/PikPak/PikPak.list,PikPak
 # > OpenAI
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
-# > SYNEmby
-DOMAIN-SUFFIX,synn.cc,SYNEmby
+# > Robo Emby
+DOMAIN,shop.91ai.de,通透世界
+DOMAIN,robo.656888.xyz,DIRECT
+DOMAIN,robo.91ai.de,通透世界
+# > 蘑菇 Emby
+DOMAIN,shop.mooguu.org,通透世界
+DOMAIN,wf.vban.xyz,通透世界
 # > CC公益Emby
 DOMAIN-SUFFIX,coemn.com,Emby
 DOMAIN-SUFFIX,carryz.net,Emby
+# > 牢大的野兽餐厅
+DOMAIN-SUFFIX,mius.uk,通透世界
+# > SYNEmby
+DOMAIN-SUFFIX,synn.cc,SYNEmby
 # > 守候Emby
 DOMAIN-SUFFIX,cn2gias.uk,Emby
 # > Jetbrains
