--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -134,14 +134,16 @@ RULE-SET,http://bm7/Twitter/Twitter.list,Twitter
 RULE-SET,http://bm7/PikPak/PikPak.list,PikPak
 # > OpenAI
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
-# > Robo Emby
+# > Robo
 DOMAIN,shop.91ai.de,通透世界
 DOMAIN,robo.656888.xyz,DIRECT
 DOMAIN,robo.91ai.de,通透世界
-# > 蘑菇 Emby
+# > 蘑菇
 DOMAIN,shop.mooguu.org,通透世界
 DOMAIN,wf.vban.xyz,通透世界
-# > CC公益Emby
+# > Peach公益
+DOMAIN-SUFFIX,embymv.tk,DIRECT
+# > CC公益
 DOMAIN-SUFFIX,coemn.com,Emby
 DOMAIN-SUFFIX,carryz.net,Emby
 # > 牢大的野兽餐厅
