--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -36,52 +36,60 @@ udp-priority = false
 udp-policy-not-supported-behaviour = REJECT
 
 [Proxy Group]
-通透世界 = select, 独断万古, Linkeless, SSTAP, JAS.AI, Ayanami, SYN, 异次元杀阵, To2, 独角兽, ESNC, CTC, ACA, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
+通透世界 = select, SNTP, Halo, Linkeless, SSTAP, Metaverse, JAS.AI, 异次元杀阵, To2, Ayanami, SYN, ESNC, 独角兽, CTC, ACA, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
 映照诸天 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Final.png
-独断万古 = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/129.png
-Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1001.png
-SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/120.png
-JAS.AI = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1003.png
-Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1004.png
-SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1005.png
-异次元杀阵 = select, policy-path=https://sub.store/download/dimension, update-interval=86400, icon-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png
-To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/To2.png
-Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Apple1.png
+SNTP = select, policy-path=https://sub.store/download/sntp, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/100.png
+Halo = select, policy-path=https://sub.store/download/Halo, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/065.png
+Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/046.png
+SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/004.png
+Metaverse = select, policy-path=https://sub.store/download/Metaverse, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/091.png
+JAS.AI = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/097.png
+Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/058.png
+SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/007.png
+Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Apple.png
 Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Bilibili1.png
 Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Telegram.png
-TikTok = select, 通透世界, DIRECT, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/TikTok.png
-OpenAI = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/OpenAI.png
-PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/PikPak.png
+TikTok = select, 通透世界, JAS.AI, DIRECT, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/TikTok.png
 Instagram = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Instagram1.png
 Twitter = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Twitter.png
-MICU = select, DIRECT, 通透世界, Emby, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/MICU.png
-SYNEmby = select, policy-path=https://sub.store/download/SYN, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/ntRRR.png, policy-regex-filter=SP
-Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/044.png
+Peach = select, DIRECT, 通透世界, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/Peach.png
+GuGu = select, DIRECT, 通透世界, policy-path=https://sub.store/download/sntp, update-interval=0, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/GuGu.png
+SYN Streaming = select, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/ntRRR.png, policy-regex-filter=SP, url=http://www.gstatic.com/generate_204, policy-path=https://sub.store/download/SYN
+Emby = select, 通透世界, SNTP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/044.png
+OpenAI = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/OpenAI.png
+PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/PikPak.png
 Streaming = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Youtube.png
 Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/034.png
-香港 = select, policy-regex-filter=🇭🇰, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
-台湾 = select, policy-regex-filter=🇨🇳, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
-新加坡 = select, policy-regex-filter=🇸🇬, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/SG.png
-日本 = select, policy-regex-filter=🇯🇵, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/JP.png
-美利坚 = select, policy-regex-filter=🇺🇸, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/US.png
-韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/KR.png
+香港 = select, policy-regex-filter=🇭🇰, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
+台湾 = select, policy-regex-filter=🇨🇳, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
+新加坡 = select, policy-regex-filter=🇸🇬, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/SG.png
+日本 = select, policy-regex-filter=🇯🇵, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/JP.png
+美利坚 = select, policy-regex-filter=🇺🇸, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/US.png
+韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/KR.png
+异次元杀阵 = select, policy-path=https://sub.store/download/dimension, update-interval=86400, icon-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png
+To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/To2.png
 ESNC = select, policy-path=https://sub.store/download/ESNC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ESNC.png
 独角兽 = select, policy-path=https://sub.store/download/unicorn, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/009.png
-CTC = select, policy-path=https://sub.store/download/CTC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/008.png
+CTC = select, policy-path=https://sub.store/download/CTC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/061.png
 ACA = select, policy-path=https://sub.store/download/ACA, update-interval=86400, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/aca.png
 
 [Rule]
+# > macked
+DOMAIN-SUFFIX,macked.app,通透世界
+
 # > 机场订阅
+DOMAIN-SUFFIX,sntp.uk,通透世界
+DOMAIN-SUFFIX,sntp.io,通透世界
+DOMAIN-SUFFIX,halo.do,通透世界
+DOMAIN-SUFFIX,linkeless.com,通透世界
 DOMAIN,sub.sstap.su,DIRECT
 DOMAIN,portal.jiasu.ai,通透世界
+DOMAIN-SUFFIX,justfancy.net,通透世界
+DOMAIN,synn.cc,通透世界
 DOMAIN,acl.syyn.pw,通透世界
-DOMAIN,subcc.sntp.uk,独断万古
 DOMAIN,www.jinglongyu.com,通透世界
 DOMAIN,mail.morefast.link,通透世界
-
-DOMAIN,v3.paddleapi.com,REJECT
-DOMAIN-KEYWORD,macked.app,通透世界
-DOMAIN,appstorrent.ru,DIRECT
+DOMAIN,api.acaisbest.online,通透世界
 
 # > BlockHttpDNS
 RULE-SET,http://bm7/BlockHttpDNS/BlockHttpDNS.list,REJECT
@@ -90,17 +98,20 @@ RULE-SET,http://bm7/BlockHttpDNS/BlockHttpDNS.list,REJECT
 RULE-SET,http://skk/non_ip/lan.conf,DIRECT
 RULE-SET,http://skk/ip/lan.conf,DIRECT
 
+# > anti-ad
+DOMAIN-SET,https://anti-ad.net/surge2.txt,Guard
+
 # > SukkaW 广告拦截 / 隐私保护 / Malware 拦截 / Phiishing 拦截
 # > Non IP
 # > 基础的 12 万拦截域名
-DOMAIN-SET,http://skk/domainset/reject.conf,Guard,extended-matching
+# DOMAIN-SET,http://skk/domainset/reject.conf,Guard,extended-matching
 # > 额外 20 万拦截域名，作为基础的补充，启用时需要搭配基础一起使用
-DOMAIN-SET,http://skk/domainset/reject_extra.conf,Guard,extended-matching
-RULE-SET,http://skk/non_ip/reject.conf,Guard,extended-matching
-RULE-SET,http://skk/non_ip/reject-no-drop.conf,REJECT-NO-DROP,extended-matching
-RULE-SET,http://skk/non_ip/reject-drop.conf,REJECT-DROP,extended-matching
-# IP
-RULE-SET,http://skk/ip/reject.conf,REJECT-DROP
+# DOMAIN-SET,http://skk/domainset/reject_extra.conf,Guard,extended-matching
+# RULE-SET,http://skk/non_ip/reject.conf,Guard,extended-matching
+# RULE-SET,http://skk/non_ip/reject-no-drop.conf,REJECT-NO-DROP,extended-matching
+# RULE-SET,http://skk/non_ip/reject-drop.conf,REJECT-DROP,extended-matching
+# > IP
+# RULE-SET,http://skk/ip/reject.conf,REJECT-DROP
 
 # > Apple & Microsoft 国内 CDN 域名
 RULE-SET,http://skk/non_ip/apple_cdn.conf,DIRECT
@@ -134,24 +145,23 @@ RULE-SET,http://bm7/Twitter/Twitter.list,Twitter
 RULE-SET,http://bm7/PikPak/PikPak.list,PikPak
 # > OpenAI
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
-# > Robo
-DOMAIN,shop.91ai.de,通透世界
+# > SYN Streaming
+DOMAIN-SUFFIX,synn.cc,SYN Streaming
+# > 守候Emby
+DOMAIN-SUFFIX,cn2gias.uk,GuGu
+# > Peach Emby
+DOMAIN-SUFFIX,embymv.tk,Peach
+# > Robo Emby
 DOMAIN,robo.656888.xyz,DIRECT
-DOMAIN,robo.91ai.de,通透世界
-# > 蘑菇
-DOMAIN,shop.mooguu.org,通透世界
-DOMAIN,wf.vban.xyz,通透世界
-# > Peach公益
-DOMAIN-SUFFIX,embymv.tk,DIRECT
-# > CC公益
+DOMAIN-SUFFIX,91ai.de,Emby
+# > 蘑菇 Emby
+DOMAIN-SUFFIX,mooguu.org,Emby
+DOMAIN,wf.vban.xyz,Emby
+# > CC公益 Emby
 DOMAIN-SUFFIX,coemn.com,Emby
 DOMAIN-SUFFIX,carryz.net,Emby
 # > 牢大的野兽餐厅
-DOMAIN-SUFFIX,mius.uk,通透世界
-# > SYNEmby
-DOMAIN-SUFFIX,synn.cc,SYNEmby
-# > 守候Emby
-DOMAIN-SUFFIX,cn2gias.uk,Emby
+DOMAIN-SUFFIX,mius.uk,Emby
 # > Jetbrains
 RULE-SET,http://bm7/Jetbrains/Jetbrains.list,通透世界
 # > 国内流媒体
@@ -174,7 +184,7 @@ RULE-SET,https://raw.githubusercontent.com/Blankwonder/surge-list/master/cn.list
 # > GeoIP China
 GEOIP,CN,DIRECT
 # > FINAL规则-映照诸天
-FINAL,映照诸天,dns-failed
+FINAL,映照诸天
 
 [URL Rewrite]
 http://bm7 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge 302
