--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -150,7 +150,7 @@ DOMAIN-SUFFIX,synn.cc,SYN Streaming
 # > 守候Emby
 DOMAIN-SUFFIX,cn2gias.uk,GuGu
 # > Peach Emby
-DOMAIN-SUFFIX,embymv.tk,Peach
+DOMAIN-SUFFIX,embymv.link,Peach
 # > Robo Emby
 DOMAIN,robo.656888.xyz,DIRECT
 DOMAIN-SUFFIX,91ai.de,Emby
