--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -3,6 +3,9 @@
 # 帮助中心 - https://nssurge.zendesk.com/
 # 技术社区 - https://community.nssurge.com
 
+# > 图标库
+# https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Semporia.json
+
 [General]
 # > 日志级别
 loglevel = notify
