--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -39,36 +39,39 @@ udp-priority = false
 udp-policy-not-supported-behaviour = REJECT
 
 [Proxy Group]
-通透世界 = select, SNTP, Halo, Linkeless, SSTAP, Metaverse, JAS.AI, 异次元杀阵, To2, Ayanami, SYN, ESNC, 独角兽, CTC, ACA, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
+通透世界 = select, SNTP, Halo, LyrebirdCloud, Fancy, Linkeless, SSTAP, Metaverse, AJS, 异次元杀阵, To2, Ayanami, SYN, ESNC, 独角兽, CTC, ACA, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Surge_Sapphire.png
 映照诸天 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Final.png
-SNTP = select, policy-path=https://sub.store/download/sntp, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/100.png
+SNTP = select, policy-path=https://sub.store/download/sntp, update-interval=0, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/100.png
 Halo = select, policy-path=https://sub.store/download/Halo, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/065.png
+LyrebirdCloud = select, policy-path=https://sub.store/download/Lyrebird, update-interval=0, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/Lyrebird.png
+Fancy = select, policy-path=https://sub.store/download/Fancy, update-interval=0, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/TKV.png
 Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/046.png
 SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/004.png
 Metaverse = select, policy-path=https://sub.store/download/Metaverse, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/091.png
-JAS.AI = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/097.png
-Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/058.png
-SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/007.png
-Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Apple.png
-Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Bilibili1.png
-Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Telegram.png
-TikTok = select, 通透世界, JAS.AI, DIRECT, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/TikTok.png
-Instagram = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Instagram1.png
-Twitter = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Twitter.png
-Peach = select, DIRECT, 通透世界, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/Peach.png
+AJS = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/097.png
+Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Apple2.png
+Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/BiliBili2.png
+Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Telegram1.png
+TikTok = select, 通透世界, AJS, DIRECT, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/TikTok1.png
+Instagram = select, 通透世界, AJS, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Instagram1.png
+Twitter = select, 通透世界, AJS, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Twitter.png
 GuGu = select, DIRECT, 通透世界, policy-path=https://sub.store/download/sntp, update-interval=0, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/GuGu.png
-SYN Streaming = select, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/ntRRR.png, policy-regex-filter=SP, url=http://www.gstatic.com/generate_204, policy-path=https://sub.store/download/SYN
+Lyrebird = select, DIRECT, 通透世界, Emby, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/Lyrebird.png
+Peach = select, DIRECT, 通透世界, Emby, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/Peach.png
+蘑菇 = select, 通透世界, DIRECT, Emby, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/MooGuu.png
 Emby = select, 通透世界, SNTP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/044.png
 OpenAI = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/OpenAI.png
 PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/PikPak.png
 Streaming = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Youtube.png
 Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/034.png
-香港 = select, policy-regex-filter=🇭🇰, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
-台湾 = select, policy-regex-filter=🇨🇳, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
-新加坡 = select, policy-regex-filter=🇸🇬, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/SG.png
-日本 = select, policy-regex-filter=🇯🇵, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/JP.png
-美利坚 = select, policy-regex-filter=🇺🇸, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/US.png
-韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/KR.png
+香港 = select, policy-regex-filter=🇭🇰, update-interval=86400, include-other-group="SNTP, Halo, LyrebirdCloud, Fancy, Linkeless, Metaverse, SSTAP, AJS", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
+台湾 = select, policy-regex-filter=🇨🇳, update-interval=86400, include-other-group="SNTP, Halo, LyrebirdCloud, Fancy, Linkeless, Metaverse, SSTAP, AJS", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
+新加坡 = select, policy-regex-filter=🇸🇬, update-interval=86400, include-other-group="SNTP, Halo, LyrebirdCloud, Fancy, Linkeless, Metaverse, SSTAP, AJS", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/SG.png
+日本 = select, policy-regex-filter=🇯🇵, update-interval=86400, include-other-group="SNTP, Halo, LyrebirdCloud, Fancy, Linkeless, Metaverse, SSTAP, AJS", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/JP.png
+美利坚 = select, policy-regex-filter=🇺🇸, update-interval=86400, include-other-group="SNTP, Halo, LyrebirdCloud, Fancy, Linkeless, Metaverse, SSTAP, AJS", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/US.png
+韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="SNTP, Halo, LyrebirdCloud, Fancy, Linkeless, Metaverse, SSTAP, AJS", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/KR.png
+Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/058.png
+SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/007.png
 异次元杀阵 = select, policy-path=https://sub.store/download/dimension, update-interval=86400, icon-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png
 To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/To2.png
 ESNC = select, policy-path=https://sub.store/download/ESNC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ESNC.png
@@ -148,23 +151,27 @@ RULE-SET,http://bm7/Twitter/Twitter.list,Twitter
 RULE-SET,http://bm7/PikPak/PikPak.list,PikPak
 # > OpenAI
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
-# > SYN Streaming
-DOMAIN-SUFFIX,synn.cc,SYN Streaming
-# > 守候Emby
+
+# > ===Emby Start===
+# > 守候-GuGu
 DOMAIN-SUFFIX,cn2gias.uk,GuGu
-# > Peach Emby
+# > Lyrebird
+DOMAIN-SUFFIX,lyrebirdemby.com,Lyrebird
+# > Peach
 DOMAIN-SUFFIX,embymv.link,Peach
-# > Robo Emby
+# > Robo
 DOMAIN,robo.656888.xyz,DIRECT
 DOMAIN-SUFFIX,91ai.de,Emby
-# > 蘑菇 Emby
+# > 蘑菇
 DOMAIN-SUFFIX,mooguu.org,Emby
 DOMAIN,wf.vban.xyz,Emby
-# > CC公益 Emby
+# > CC公益
 DOMAIN-SUFFIX,coemn.com,Emby
 DOMAIN-SUFFIX,carryz.net,Emby
 # > 牢大的野兽餐厅
 DOMAIN-SUFFIX,mius.uk,Emby
+# > ===Emby End===
+
 # > Jetbrains
 RULE-SET,http://bm7/Jetbrains/Jetbrains.list,通透世界
 # > 国内流媒体
