--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -41,21 +41,21 @@ udp-policy-not-supported-behaviour = REJECT
 [Proxy Group]
 通透世界 = select, SNTP, Halo, LyrebirdCloud, Fancy, Linkeless, SSTAP, Metaverse, AJS, 异次元杀阵, To2, Ayanami, SYN, ESNC, 独角兽, CTC, ACA, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Surge_Sapphire.png
 映照诸天 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Final.png
-SNTP = select, policy-path=https://sub.store/download/sntp, update-interval=0, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/100.png
+SNTP = select, policy-path=https://sub.store/download/sntp, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/100.png
 Halo = select, policy-path=https://sub.store/download/Halo, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/065.png
-LyrebirdCloud = select, policy-path=https://sub.store/download/Lyrebird, update-interval=0, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/Lyrebird.png
-Fancy = select, policy-path=https://sub.store/download/Fancy, update-interval=0, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/TKV.png
+LyrebirdCloud = select, policy-path=https://sub.store/download/Lyrebird, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/Lyrebird.png
+Fancy = select, policy-path=https://sub.store/download/Fancy, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/TKV.png
 Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/046.png
 SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/004.png
 Metaverse = select, policy-path=https://sub.store/download/Metaverse, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/091.png
-AJS = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/097.png
+AJS = select, policy-path=https://sub.store/download/AJS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/097.png
 Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Apple2.png
 Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/BiliBili2.png
 Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Telegram1.png
 TikTok = select, 通透世界, AJS, DIRECT, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/TikTok1.png
 Instagram = select, 通透世界, AJS, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Instagram1.png
 Twitter = select, 通透世界, AJS, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Twitter.png
-GuGu = select, DIRECT, 通透世界, policy-path=https://sub.store/download/sntp, update-interval=0, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/GuGu.png
+GuGu = select, DIRECT, 通透世界, policy-path=https://sub.store/download/sntp, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/GuGu.png
 Lyrebird = select, DIRECT, 通透世界, Emby, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/Lyrebird.png
 Peach = select, DIRECT, 通透世界, Emby, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/Peach.png
 蘑菇 = select, 通透世界, DIRECT, Emby, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/MooGuu.png
@@ -201,4 +201,4 @@ http://bm7 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master
 http://skk https://ruleset.skk.moe/List 302
 
 [MITM]
-hostname = -api.revenuecat.com, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
+hostname = -*.apple.com, -weather-data.apple.com, -www.google.com
