--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -12,7 +12,7 @@ loglevel = notify
 # > 展示错误页面
 show-error-page-for-reject = true
 # > 节点超时
-test-timeout = 3
+test-timeout = 2
 # > 直连测试 URL
 internet-test-url = http://www.baidu.com
 # > 代理测速 URL
@@ -20,15 +20,15 @@ proxy-test-url = http://1.1.1.1/generate_204
 # > GeoIP数据库
 geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 # > DNS 服务器
-dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
+dns-server = 223.5.5.5, 119.29.29.29
 # > 加密 DNS
-encrypted-dns-server = quic://223.5.5.5, quic://223.6.6.6, https://1.12.12.12/dns-query, https://120.53.53.53/dns-query
+encrypted-dns-server = https://223.5.5.5/dns-query
+# > DNS 劫持
+hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > IPv6 DNS 查询
 ipv6 = false
 # > IPv6 VIF 模式
 ipv6-vif = disabled
-# > DNS 劫持
-hijack-dns = *:53
 # > 排除简单主机名
 exclude-simple-hostnames = true
 # > 跳过代理
@@ -104,8 +104,8 @@ RULE-SET,http://bm7/BlockHttpDNS/BlockHttpDNS.list,REJECT
 RULE-SET,http://skk/non_ip/lan.conf,DIRECT
 RULE-SET,http://skk/ip/lan.conf,DIRECT
 
-# > anti-ad
-DOMAIN-SET,https://anti-ad.net/surge2.txt,Guard
+# > Anti-AD
+DOMAIN-SET,https://anti-ad.net/surge2.txt,Guard,extended-matching
 
 # > SukkaW 广告拦截 / 隐私保护 / Malware 拦截 / Phiishing 拦截
 # > Non IP
