--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -111,18 +111,6 @@ RULE-SET,http://bm7/BlockHttpDNS/BlockHttpDNS.list,REJECT
 # > Anti-AD
 DOMAIN-SET,https://anti-ad.net/surge2.txt,Guard,extended-matching
 
-# > SukkaW 广告拦截 / 隐私保护 / Malware 拦截 / Phiishing 拦截
-# > Non IP
-# > 基础的 12 万拦截域名
-# DOMAIN-SET,http://skk/domainset/reject.conf,Guard,extended-matching
-# > 额外 20 万拦截域名，作为基础的补充，启用时需要搭配基础一起使用
-# DOMAIN-SET,http://skk/domainset/reject_extra.conf,Guard,extended-matching
-# RULE-SET,http://skk/non_ip/reject.conf,Guard,extended-matching
-# RULE-SET,http://skk/non_ip/reject-no-drop.conf,REJECT-NO-DROP,extended-matching
-# RULE-SET,http://skk/non_ip/reject-drop.conf,REJECT-DROP,extended-matching
-# > IP
-# RULE-SET,http://skk/ip/reject.conf,REJECT-DROP
-
 # > Apple & Microsoft 国内 CDN 域名
 RULE-SET,http://skk/non_ip/apple_cdn.conf,DIRECT
 RULE-SET,http://skk/non_ip/microsoft_cdn.conf,DIRECT
@@ -195,7 +183,7 @@ RULE-SET,http://skk/ip/stream.conf,Streaming,extended-matching
 RULE-SET,http://skk/non_ip/global.conf,通透世界,extended-matching
 RULE-SET,http://bm7/Proxy/Proxy_All_No_Resolve.list,通透世界,extended-matching
 # > 局域网地址
-RULE-SET,http://bm7/lan/Lan_Resolve.list,DIRECT
+RULE-SET,http://bm7/Lan/Lan_Resolve.list,DIRECT
 # > China
 RULE-SET,http://skk/non_ip/domestic.conf,DIRECT
 RULE-SET,http://skk/non_ip/direct.conf,DIRECT
