--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -103,7 +103,7 @@ DOMAIN,acl.syyn.pw,通透世界
 DOMAIN,www.jinglongyu.com,通透世界
 DOMAIN,mail.morefast.link,通透世界
 DOMAIN-SUFFIX,ycoris.on,通透世界
-DOMAIN,api.acaisbest.online,通透世界
+DOMAIN,dadada.acaisbest.com,DIRECT
 
 # > BlockHttpDNS
 RULE-SET,http://bm7/BlockHttpDNS/BlockHttpDNS.list,REJECT
