--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -4,7 +4,17 @@
 # 技术社区 - https://community.nssurge.com
 
 # > 图标库
+# https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/MyIcons.json
+# https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon.json
+# https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/ligeicon-surge.json
+# https://raw.githubusercontent.com/Softlyx/Fileball/main/YUAN/tubiao.json
 # https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Semporia.json
+# https://raw.githubusercontent.com/black2c7/Emby-icons/refs/heads/main/TheRaw.json
+# https://raw.githubusercontent.com/Semporia/Hand-Painted-icon/master/Semporia.json
+# https://raw.githubusercontent.com/erdongchanyo/icon/refs/heads/main/edc-filter-icon-gallery.json
+# https://raw.githubusercontent.com/Koolson/Qure/refs/heads/master/Other/QureColor.json
+# https://raw.githubusercontent.com/Orz-3/mini/refs/heads/master/miniColor.json
+# https://raw.githubusercontent.com/fmz200/wool_scripts/refs/heads/main/icons/icons-all.json
 
 [General]
 # > 日志级别
@@ -20,9 +30,7 @@ proxy-test-url = http://1.1.1.1/generate_204
 # > GeoIP数据库
 geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 # > DNS 服务器
-dns-server = 223.5.5.5, 119.29.29.29
-# > 加密 DNS
-encrypted-dns-server = https://223.5.5.5/dns-query
+dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
 # > DNS 劫持
 hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > IPv6 DNS 查询
@@ -146,9 +154,8 @@ RULE-SET,http://skk/non_ip/ai.conf,OpenAI
 
 # > ===Emby Start===
 # > Robo
-DOMAIN,robo.668918.xyz,DIRECT
-DOMAIN,robo.656888.xyz,DIRECT
-DOMAIN,robo.189.ovh,DIRECT
+DOMAIN-SUFFIX,668918.xyz,DIRECT
+DOMAIN-SUFFIX,656888.xyz,DIRECT
 # > PandaTV
 DOMAIN-SUFFIX,pdatv.cc,PandaTV
 # > 守候-GuGu
@@ -163,8 +170,6 @@ DOMAIN-SUFFIX,lyrebirdemby.com,Lyrebird
 DOMAIN-SUFFIX,811861.xyz,AWA
 # > ChilledWatermelon
 DOMAIN,emby.1024.name,DIRECT
-# > 蘑菇
-DOMAIN,wf.vban.xyz,Emby
 # > CC公益
 DOMAIN,cc.coemn.com,Emby
 DOMAIN-SUFFIX,carryz.net,Emby
