--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -169,9 +169,9 @@ DOMAIN-SUFFIX,lyrebirdemby.com,Lyrebird
 # > AWA
 DOMAIN-SUFFIX,811861.xyz,AWA
 # > ChilledWatermelon
-DOMAIN,emby.1024.name,DIRECT
+DOMAIN-SUFFIX,1024.name,DIRECT
 # > CC公益
-DOMAIN,cc.coemn.com,Emby
+DOMAIN-SUFFIX,coemn.com,Emby
 DOMAIN-SUFFIX,carryz.net,Emby
 # > 牢大的野兽餐厅
 DOMAIN-SUFFIX,mius.uk,Emby
