--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -152,30 +152,7 @@ RULE-SET,http://bm7/PikPak/PikPak.list,PikPak
 # > OpenAI
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
 
-# > ===Emby Start===
-# > Robo
-DOMAIN-SUFFIX,668918.xyz,DIRECT
-DOMAIN-SUFFIX,656888.xyz,DIRECT
-# > PandaTV
-DOMAIN-SUFFIX,pdatv.cc,PandaTV
-# > 守候-GuGu
-DOMAIN-SUFFIX,cn2gias.uk,GuGu
-# > Peach
-DOMAIN-SUFFIX,embymv.link,Peach
-# > Nanflix
-DOMAIN-SUFFIX,nanflix.net,Nanflix
-# > Lyrebird
-DOMAIN-SUFFIX,lyrebirdemby.com,Lyrebird
-# > AWA
-DOMAIN-SUFFIX,811861.xyz,AWA
-# > ChilledWatermelon
-DOMAIN-SUFFIX,1024.name,DIRECT
-# > CC公益
-DOMAIN-SUFFIX,coemn.com,Emby
-DOMAIN-SUFFIX,carryz.net,Emby
-# > 牢大的野兽餐厅
-DOMAIN-SUFFIX,mius.uk,Emby
-# > ===Emby End===
+# > Emby
 
 # > Jetbrains
 RULE-SET,http://bm7/Jetbrains/Jetbrains.list,通透世界
